--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "teahub",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Vue front end applications and components",
   "type": "module",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "main": "./dist/teahub.umd.cjs",
   "module": "./dist/teahub.es.js",
   "exports": {
@@ -37,28 +39,26 @@
     "vue-cal": "^4.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.0.2",
-    "@storybook/addon-interactions": "^7.0.2",
-    "@storybook/addon-links": "^7.0.2",
-    "@storybook/blocks": "^7.0.2",
-    "@storybook/testing-library": "^0.0.14-next.2",
-    "@storybook/vue3": "^7.0.2",
-    "@storybook/vue3-vite": "^7.0.2",
+    "@storybook/addon-essentials": "^8.3.5",
+    "@storybook/addon-interactions": "^8.3.5",
+    "@storybook/addon-links": "^8.3.5",
+    "@storybook/blocks": "^8.3.5",
+    "@storybook/test": "^8.3.5",
+    "@storybook/vue3": "^8.3.5",
+    "@storybook/vue3-vite": "^8.3.5",
     "@testing-library/vue": "^7.0.0",
     "@vitejs/plugin-vue": "^4.1.0",
     "@vitest/coverage-c8": "^0.30.1",
     "@vue/test-utils": "^2.3.2",
     "eslint": "^8.19.0",
     "eslint-plugin-jsdoc": "^39.3.3",
-    "eslint-plugin-storybook": "^0.6.11",
+    "eslint-plugin-storybook": "^0.9.0",
     "eslint-plugin-vue": "^9.1.1",
     "faker": "^6.6.6",
     "jsdom": "^21.1.1",
     "less": "^4.1.0",
     "less-loader": "^7.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "storybook": "^7.0.2",
+    "storybook": "^8.3.5",
     "vite": "^4.2.0",
     "vitest": "^0.30.1"
   },
